Zwei Verweise vergessen...

--- a/skript.tex
+++ b/skript.tex
@@ -270,7 +270,7 @@ $G$ aus \textit{(\ref{5.1.4})}:
 \path[edge] (v_1) to (v_4) node[midway,above] {$e_4$};
 \end{tikzpicture}
 \end{center}
-\caption{Zu \textit{5.1.14}: Graphen $G$, $S_1$ und $S_2$}
+\caption{Zu \textit{(\ref{5.1.14})}: Graphen $G$, $S_1$ und $S_2$}
 \end{figure}
 $U:=\{v_1,v_2,v_4\}$, $E_1:=\{e_4\}$, $E_2:=\{e_1,e_2,e_3,e_4\}$ und $S_1:=\left(U,E_1,\nu\vert_{E_1}\right)$, $S_2:=\left(U,E_2,\nu\vert_{E_2}\right)$. Beides sind Teilgraphen, $S_2$ induziert.
 \subsubsection{Bemerkung}\ssslbl
@@ -374,14 +374,14 @@ $G=(V,E)$. Dann äquivalent:
 \item $G$ ist kreisfrei, für $v,w\in V$, $v\neq w$, $e:=\{v,w\}\not\in E$ enthält $(V,E\cup\{e\})$ einen Kreis
 \end{enumerate}
 \subsubsection*{Beweis}
-$a\Rightarrow b$: $G$ zusammenhängend, dh. es existiert mindestens ein $v-w$-Weg. Gäbe es zwei verschiedene, so enthielte G einen Kreis (\textit{5.1.10(b)})\\[1ex]
+$a\Rightarrow b$: $G$ zusammenhängend, dh. es existiert mindestens ein $v-w$-Weg. Gäbe es zwei verschiedene, so enthielte G einen Kreis (\textit{\ref{5.1.10}(b)})\\[1ex]
 $b\Rightarrow c$: Wäre $(V,E\setminus\{e\})$ zusammenhängend, so wären die beiden Knoten von $e$ durch einen Weg in $(V,E\setminus\{e\})$ verbunden, $e$ verbindet sie in $G$ $\Rightarrow$ Widerspruch: 2 verschiedene Wege\\[1ex]
 $c\Rightarrow d$: Enthielte $G$ einen Kreis, so könnte beliebige Kante entfernt wreden ohne Zusammenhang zu verlieren. Wäre für $v,w\in V$, $v\neq w$, $e=\{v,w\}\neq E$ $(V,E\cup\{e,\})$ kreisfrei, so wären $v,w$ in $G$ nicht verbunden.\\[1ex]
 $d\Rightarrow a$: Enthielte $G$ zwei verschiedene Zusammenhangskomponenten $S_1,S_2$, so könnte zwischen $S_1$ und $S_2$ beliebige Kante eingefügt werden, ohne Kreis zu erzeugen.
 \subsubsection{Korollar}\ssslbl
 $G=(V,E)$ Baum, $\vert V\vert\geq1$. Dann $\vert E\vert=\vert V\vert-1$
 \subsubsection*{Beweis}
-vollständige Induktion über $\vert V\vert$, benutze \textit{5.1.31}.
+vollständige Induktion über $\vert V\vert$, benutze \textit{(\ref{5.1.31})}.
 \subsubsection{Korollar}\ssslbl
 $G=(V,E)$ $\vert V\vert\geq1$. Dann sit äquivalent
 \begin{enumerate}[(a)]
