--- a/skript.tex
+++ b/skript.tex
@@ -10,7 +10,7 @@
 \usepackage{tikz}
 \usepackage{enumerate}
 \usepackage{makeidx}
-\usepackage{hyperref}
+\usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 
 \makeindex
 
@@ -21,7 +21,6 @@
 \definecolor{secback}{rgb}{0.75,0.75,0.75}
 \definecolor{headerback}{rgb}{0.8,0.8,0.8}
 
-% \section und \subsection automatisch mit Labeln versehen
 \newcommand\slbl{\label{\thesection}}
 \newcommand\sslbl{\label{\thesubsection}}
 \newcommand\ssslbl{\label{\thesubsubsection}}
